toggle logic JS

--- a/index.html
+++ b/index.html
@@ -22,17 +22,39 @@
             <!-- header start -->
             <section class="accordion-header">
                 <h2>Is ignorance really bliss&quest;</h2>
-                <button type="button">
+                <button type="button" class="toggle">
                     <span class="up"><i class="fas fa-chevron-up"></i></span>
                     <span class="down"><i class="fas fa-chevron-down"></i></span>
                 </button>
             </section>
             <!-- header end -->
-            <hr>
             <!-- question text start -->
             <section class="accordion-text">
                 <p>Before they sold out gochujang fixie trust fund helvetica. Fingerstache jean shorts tonx flannel tote
                     bag. Mukbang prism drinking vinegar keffiyeh vice crucifix vape man braid vaporware vinyl listicle.
+                </p>
+            </section>
+            <!-- question text end -->
+        </article>
+        <!-- accordion end -->
+
+        <!-- accordion start -->
+        <article class="accordion-wrapper">
+            <!-- header start -->
+            <section class="accordion-header">
+                <h2>Where is the line between art and not art&quest;</h2>
+                <button type="button" class="toggle">
+                    <span class="up"><i class="fas fa-chevron-up"></i></span>
+                    <span class="down"><i class="fas fa-chevron-down"></i></span>
+                </button>
+            </section>
+            <!-- header end -->
+            <!-- question text start -->
+            <section class="accordion-text">
+                <p>IPhone beard echo park mustache migas, next level cloud bread gentrify narwhal jianbing. Four loko
+                    crucifix flannel tonx humblebrag. Shaman post-ironic street art gochujang gentrify, vinyl authentic
+                    air plant pabst. Vape
+                    3 wolf moon iceland chillwave next level.
                 </p>
             </section>
             <!-- question text end -->
